# selah-app

./: .gitignore  CLAUDE.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .env.example  drizzle.config.ts  openapi.json  package.json  tsconfig.json  vitest.config.ts
apps/api/src/: app.ts  index.ts
apps/web/: .env.example  eslint.config.js  next.config.ts  package.json  playwright.config.ts  proxy.ts  verify-final.mjs  verify-shift.mjs  verify-shift2.mjs  verify-shift3.mjs  verify-shift4.mjs  verify-shift5.mjs  verify-shift6.mjs  verify-shift7.mjs  verify-shift8.mjs  vitest.config.ts
apps/web/app/: layout.tsx
apps/web/components/: AppSidebar.tsx  ChordProView.tsx  CreateTeamForm.tsx  CreateTeamSheet.tsx  DataTable.tsx  EditChordProDialog.tsx  EditTeamForm.tsx  FacebookOAuthFragmentCleanup.tsx  InviteForm.tsx  LineupList.tsx  LinkedAccounts.tsx  MiniMusicPlayer.tsx  MusicPlayerBar.tsx  NowPlayingCard.tsx  PageBreadcrumbNav.tsx  QueryProvider.tsx  ScheduleCalendar.tsx  SessionProvider.tsx  SignInForm.tsx  SignUpForm.tsx  SongDetailInfo.tsx  SongDetailPlayer.tsx  SongDetailView.tsx  SongDetailsSheet.tsx  SongDetailsView.tsx  SongList.tsx  SongLyricsChords.tsx  SongPlayerProvider.tsx  SongSearchCombobox.tsx  SongUploadForm.tsx  TeamDetailsSheet.tsx  TeamList.tsx  TeamMembershipFields.tsx  (+3 more)
docker/: .env.example
garage/: garage.toml
scripts/: garage-init.sh  stem-worker-dev.sh
services/stem-worker/: .env.example  Dockerfile  pyproject.toml
services/stem-worker/app/: callback.py  config.py  encode.py  main.py  separation.py  storage.py
(+305 files in other folders)
