[project]
name = "stem-worker"
version = "0.1.0"
description = "Standalone Demucs-based audio stem separation worker for selah-app"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "demucs>=4.0.1",
  # demucs uses numpy internally (transformer.py) without declaring it as
  # its own dependency - installing demucs alone leaves it missing.
  "numpy>=1.26",
  "torch>=2.2",
  "torchaudio>=2.2",
  "boto3>=1.35",
  "httpx>=0.27",
  "pydantic-settings>=2.5",
]

[tool.uv]
# Demucs pulls in an old numba/llvmlite pin - resolved separately from the
# TS workspace's pnpm lockfile, this is its own dependency tree entirely.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
